--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ title: John of All Trades
 description: A man in pursuit of all sorts of skills in life. Mostly tech-based. Mostly.
 baseurl: "/blog" # put subpath of your site, e.g. /blog
 url: "https://johnle.org" # put the base hostname & protocol for your site
+permalink: /:title/
 
 email: john@johnle.org
 twitter_username: 
